[tool.poetry]
name = "ssx999-project"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.8.6"
numpy = "^1.19.4"
pandas = "^1.1.4"
requests = "^2.24.0"
pathy = "^0.3.3"
google-cloud-storage = "^1.32.0"
fsspec = "^0.8.4"
gcsfs = "^0.7.1"
ta = "^0.6.1"
